[project]
name = "adaptive-audiogram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy<2.0",
    "pandas>=2.2.3",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.1",
]
